Fix layout spacing for all pages

--- a/src/style/contact.css
+++ b/src/style/contact.css
@@ -4,6 +4,7 @@
     row-gap: 16px;
     justify-content: start !important;
     margin-top: 25px;
+    height: calc(100vh - 150px);
 }
 
 .contact-page .hours-div {
