--- a/src/style/index.css
+++ b/src/style/index.css
@@ -19,7 +19,7 @@ body {
     background-color: black;
 
     display: grid;
-    grid-template-rows: 150px calc(100vh - 150px) 150px;
+    grid-template-rows: 150px 1fr 150px;
 }
 
 #background-img {
